# serializer version: 1
# name: test_states[fan.my_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': None,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.my_device',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tplink',
    'previous_unique_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': '123456789ABCDEFGH',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[fan.my_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my_device',
      'percentage': None,
      'percentage_step': 25.0,
      'preset_mode': None,
      'preset_modes': None,
      'supported_features': <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.my_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_states[fan.my_device_my_fan_0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': None,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.my_device_my_fan_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'my_fan_0',
    'platform': 'tplink',
    'previous_unique_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': '123456789ABCDEFGH00',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[fan.my_device_my_fan_0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my_device my_fan_0',
      'percentage': None,
      'percentage_step': 25.0,
      'preset_mode': None,
      'preset_modes': None,
      'supported_features': <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.my_device_my_fan_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_states[fan.my_device_my_fan_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': None,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.my_device_my_fan_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'my_fan_1',
    'platform': 'tplink',
    'previous_unique_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': '123456789ABCDEFGH01',
    'unit_of_measurement': None,
  })
# ---
# name: test_states[fan.my_device_my_fan_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'my_device my_fan_1',
      'percentage': None,
      'percentage_step': 25.0,
      'preset_mode': None,
      'preset_modes': None,
      'supported_features': <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.my_device_my_fan_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_states[my_device-entry]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'mac',
        'aa:bb:cc:dd:ee:ff',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': '1.0.0',
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'tplink',
        '123456789ABCDEFGH',
      ),
    }),
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'TP-Link',
    'model': 'HS100',
    'model_id': None,
    'name': 'my_device',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': '1.0.0',
    'via_device_id': None,
  })
# ---
